--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,16 @@ services:
   frontend:
     build: ./frontend
     container_name: react_client
+    stdin_open: true
+    tty: true
     volumes:
       - ./frontend:/app
-      # Volumen nombrado para preservar node_modules creados en la imagen
       - frontend_node_modules:/app/node_modules
     ports:
-      - "3000:3000"
+      - "5173:5173"
     depends_on:
       - backend
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-      - HOST=0.0.0.0
+
 volumes:
   frontend_node_modules:
     driver: local
