--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: frontend   
 
       - name: Build React app
         run: npm run build
+        working-directory: frontend  
 
       - name: Deploy to EC2 via SSH
         uses: appleboy/scp-action@v0.1.7
@@ -30,6 +32,6 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          source: "build/*"
+          source: "frontend/build/*"
           target: ${{ secrets.EC2_PATH }}
-          strip_components: 1
+          strip_components: 2
