--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,8 +61,9 @@
             "tailwindcss": "^4.1.18",
             "vite": "6.3.5"
       },
+      "type": "module",
       "scripts": {
-            "dev": "vite",
+            "dev": "vite --host 0.0.0.0",
             "build": "vite build"
       }
 }
