--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy React App to AWS EC2
+name: Deploy React App Docker Direct to EC2
 
 on:
   push:
@@ -13,25 +13,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-        working-directory: frontend   
-
-      - name: Build React app
-        run: npm run build
-        working-directory: frontend  
-
-      - name: Deploy to EC2 via SSH
+      - name: Copy frontend to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          source: "frontend/build/*"
-          target: ${{ secrets.EC2_PATH }}
-          strip_components: 2
+          source: "frontend/"
+          target: "~/react-app"
+
+      - name: SSH and build/run Docker on EC2
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            cd ~/react-app
+            docker build -t react-app:latest .
+            docker stop react-app || true
+            docker rm react-app || true
+            docker run -d --name react-app -p 80:80 react-app:latest
