--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Hacer checkout del repositorio
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Copiar la carpeta frontend completa a EC2
       - name: Copy frontend to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -22,16 +24,26 @@ jobs:
           source: "frontend/"
           target: "~/react-app"
 
+      # 3️⃣ Conectarse a EC2 y construir/ejecutar Docker
       - name: SSH and build/run Docker on EC2
-  uses: appleboy/ssh-action@v0.1.7
-  with:
-    host: ${{ secrets.EC2_HOST }}
-    username: ${{ secrets.EC2_USER }}
-    key: ${{ secrets.EC2_KEY }}
-    script: |
-      cd ~/react-app          # Entramos en la carpeta donde se copió frontend
-      cd frontend             # Entramos en la subcarpeta donde está Dockerfile
-      docker build -t react-app:latest .
-      docker stop react-app || true
-      docker rm react-app || true
-      docker run -d --name react-app -p 80:80 react-app:latest
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            # Entrar a la carpeta donde se copió frontend
+            cd ~/react-app/frontend
+
+            # Opcional: habilitar BuildKit para evitar warning
+            export DOCKER_BUILDKIT=1
+
+            # Construir la imagen Docker
+            docker build -t react-app:latest .
+
+            # Detener y eliminar contenedor viejo si existe
+            docker stop react-app || true
+            docker rm react-app || true
+
+            # Correr nuevo contenedor en puerto 80
+            docker run -d --name react-app -p 80:80 react-app:latest
