--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
             "@tailwindcss/postcss": "^4.1.18",
+            "axios": "^1.7.0",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
@@ -54,6 +55,7 @@
       "devDependencies": {
             "@tailwindcss/vite": "^4.1.18",
             "@types/node": "^20.10.0",
+            "@types/react": "^19.2.7",
             "@types/react-dom": "^19.2.3",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "autoprefixer": "^10.4.23",
