--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
       - "8000:8000"
     environment:
       - DEBUG=1
-      - BROWSER=none 
+      - BROWSER=none
 
   frontend:
-    build: 
+    build:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: react_client
@@ -24,13 +24,24 @@ services:
       - ./frontend:/app
       # Elimina esta línea o coméntala temporalmente:
       # - frontend_node_modules:/app/node_modules
-      - /app/node_modules  # Esto crea un volumen anónimo
+      - /app/node_modules # Esto crea un volumen anónimo
     ports:
       - "5173:5173"
     environment:
       - NODE_ENV=development
     command: sh -c "npm install && npm run dev"
     depends_on:
+      - backend
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx_proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - frontend
       - backend
 
 # Comenta o elimina esta sección temporalmente:
