--- a/.github/workflows/deploy-native.yml
+++ b/.github/workflows/deploy-native.yml
@@ -46,6 +46,16 @@ jobs:
           source: "backend/*"
           target: "/home/ubuntu/cienspay-backend"
           strip_components: 1
+
+      - name: Deploy Config Files
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          source: "nginx/*"
+          target: "/home/ubuntu/cienspay-config"
+
           
       - name: SSH Remote Commands
         uses: appleboy/ssh-action@v0.1.10
