--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,36 +4,38 @@ services:
   backend:
     build: ./backend
     container_name: django_api
-    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./backend:/app
     ports:
       - "8000:8000"
     environment:
       - DEBUG=1
-      - BROWSER=none 
+      - SECRET_KEY=dev-secret-key-123
+      - ALLOWED_HOSTS=localhost,127.0.0.1,backend
+    restart: unless-stopped
 
   frontend:
-    build: 
-      context: ./frontend
-      dockerfile: Dockerfile
+    build: ./frontend
+
+
     container_name: react_client
-    stdin_open: true
-    tty: true
+
+
     volumes:
       - ./frontend:/app
-      # Elimina esta línea o coméntala temporalmente:
-      # - frontend_node_modules:/app/node_modules
-      - /app/node_modules  # Esto crea un volumen anónimo
+      - /app/node_modules
+
+
     ports:
       - "5173:5173"
     environment:
       - NODE_ENV=development
-    command: sh -c "npm install && npm run dev"
+      - VITE_API_URL=http://localhost:8000/api  # Para desarrollo local
+      # O usa esto para acceder desde el contenedor:
+      # - VITE_API_URL=http://backend:8000/api
+      - CHOKIDAR_USEPOLLING=true
+    command: sh -c "npm run dev"
     depends_on:
       - backend
-
-# Comenta o elimina esta sección temporalmente:
-# volumes:
-#   frontend_node_modules:
-#     driver: local
+    restart: unless-stopped
