--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,24 +18,21 @@ services:
   frontend:
     build: ./frontend
 
-
     container_name: react_client
-
 
     volumes:
       - ./frontend:/app
       - /app/node_modules
 
-
     ports:
       - "5173:5173"
     environment:
       - NODE_ENV=development
-      - VITE_API_URL=http://localhost:8000/api  # Para desarrollo local
+      - VITE_API_URL=http://localhost:8000/api # Para desarrollo local
       # O usa esto para acceder desde el contenedor:
       # - VITE_API_URL=http://backend:8000/api
       - CHOKIDAR_USEPOLLING=true
-    command: sh -c "npm run dev"
+    command: sh -c "npm install && npm run dev"
     depends_on:
       - backend
     restart: unless-stopped
