--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 VITE_API_URL=http://localhost:8000
-VITE_API_URL=http://localhost:8000/api
+VITE_API_URL=http://3.144.142.161/api
 VITE_APP_NAME=CiensPay
