--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,5 @@
 Django>=5.0
-django-cors-headers
+#django-cors-headers
+djangorestframework>=3.14}
+django-cors-headers==4.3.1
+python-dotenv==1.0.0
