agg npm install

--- a/.github/workflows/deploy-native.yml
+++ b/.github/workflows/deploy-native.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install and Build
         working-directory: frontend
         run: |
-          npm ci
+          npm install
           npm run build
           
       - name: Deploy Frontend to EC2
