--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 Django>=5.0
 #django-cors-headers
-djangorestframework>=3.14}
+djangorestframework>=3.14
 djangorestframework-simplejwt
 django-cors-headers==4.3.1
 python-dotenv==1.0.0
